[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MCE_project"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["MCE_project"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest]
python_files = "test_*.py"
testpaths = ["MCE_project/tests"]
